[package]
name = "aoc2019"
version = "0.1.0"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
permutohedron = "0.2.4"
num = "0.2.0"
itertools = "0.8.2"
bit-set = "0.5.1"
smallvec = "1.0.0"
